# rquest

./: Cargo.toml  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/core/: Cargo.toml
api/core/src/: auth.rs  lib.rs
api/core/src/http/: extractor.rs  mod.rs
api/core/src/mutation/: message.rs  user.rs
api/core/src/query/: message.rs  user.rs
api/entity/: Cargo.toml
api/entity/src/: _message.rs  _thread.rs  event.rs  lib.rs  message.rs  mod.rs  prelude.rs  session.rs  thread.rs  user.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_setup.rs  m20230121_194114_create_user_table.rs  m20230121_220247_create_message_table.rs  m20230122_001116_create_thread_table.rs  m20230122_002511_add_thread_relation_to_message.rs  m20230206_214835_add_event_table.rs  m20230206_214835_add_session_table.rs  m20230211_131958_add_event_fk_to_thread.rs  m20230211_131958_add_session_fk_to_thread.rs  m20230219_225446_create_question_table.rs  main.rs
api/migrations/: 20230115015310_setup.sql  20230115015315_add_user_table.sql  20230115193930_add_thread_and_message_table.sql
api/src/: http.rs  lib.rs  main.rs
api/src/http/: extractor.rs  mod.rs
api/src/models/: message.rs
api/src/routes/: auth.rs  message.rs  mod.rs  qanda.rs  test.rs  thread.rs  user.rs
kafka/: Dockerfile  start_kafka.sh
nginx/: default.conf
src/: main.rs
src/routes/: mod.rs
