[package]
name = "rquest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
sea-orm = { version = "0.10.7", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-rustls", "time"] }
thiserror = "1.0.38"
time = "0.2"
tokio = { version = "1.24.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v1", "serde"] }
