[package]
name = "rquest"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "core", "entity", "migration"]

[workspace.dependencies]
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v1", "serde"] }

[dependencies]
entity = { path = "./entity" }
rquest_core = { path = "./core" }

anyhow = "1.0.68"
axum = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
sea-orm = { version = "0.10.7", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "uuid", "runtime-tokio-native-tls", "time"] }
thiserror = "1.0.38"
time = "0.2"
tokio = { version = "1.24.1", features = ["full"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
async-trait = "0.1.62"
argon2 = "0.4.1"
rand = "0.8.5"
dotenvy = "0.15.6"
