[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }

sea-orm = { version = "0.10.7", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
