[package]
name = "rquest_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
axum = "0.6.2"
#entity = { path = "../entity" }

uuid = { workspace = true }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0.91"
sqlx = { workspace = true } 
thiserror = "1.0.38"
time = "0.2"
tokio = { version = "1.24.1", features = ["full"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
argon2 = "0.4.1"
rand = "0.8.5"
dotenvy = "0.15.6"
sea-orm = { version = "^0" }
[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

